--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    background-image: url(../public/img/fondoP1.jpg);
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body::-webkit-scrollbar {
+    width: 7px;
+    background: #343f4f;
+}
+body::-webkit-scrollbar-thumb {
+    background: #1d3557;
+    border-radius: 5px;
+}
+.App{
+    text-align: center;
+    display: center;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100v;
+}
+.pipi{
+    margin-top: 150px;
+}
+.A{
+        color: white;
+        text-decoration: none;
+        margin-left: 10px;
 }
